index.jsp fatta

--- a/GestioneCorsi/WebContent/footer.html
+++ b/GestioneCorsi/WebContent/footer.html
@@ -1,9 +1,9 @@
 <nav>
 	<h3>Link Interni</h3>
 	<ul>
-		<li><a href="home.jsp">Home page</a></li>
-		<li><a href="acquisti.jsp">Acquisti</a></li>
-		<li><a href="visualizza.jsp">Riepilogo ordine</a></li>
+		<li><a href="#">Home page</a></li>
+		<li><a href="#">Acquisti</a></li>
+		<li><a href="#">Riepilogo ordine</a></li>
 	</ul>
 </nav>
 <nav>
